# src/routes/ping.routes.ts
@@ -1,0 +1,12 @@
+import express from 'express'
+import PingController from '../controllers/ping.controller'
+
+const router = express.Router()
+
+router.get('/ping', async (_req, res) => {
+  const controller = new PingController()
+  const response = await controller.getMessage()
+  return res.send(response)
+})
+
+export default router
